# fia-docs-bot

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .tmux  Cargo.toml  README.md  Shuttle.toml  compose.dev.yaml  compose.dev.yml  compose.yaml  deny.toml  fia-docs-bot.html  readme.md  rustfmt.toml
.github/workflows/: build.yml  rust.yml
.sqlx/: query-09d3e6697616c3ee748807e10ecd7540dd38b6681a12d32342f0662aed1cca7f.json  query-16456f4721c496a244091a5c60c3ff6656b4e339b646b75040f47b2332358ec4.json  query-1e7e99a792665725ce2f5dad11c055a760a45be41cf0c87fdf568f561599b09c.json  query-1f55d7aaefcfe1b0e23df4654c007b23ce2baf012470cc27d4639438f2b75594.json  query-20aca8e784a4850e4b6d2e8721f823d85b176fd703291df3c1257492ebf94eb4.json  query-298e1b437325fa749484afd3ff5ee1c9c2e8d88030d79fcd1067c1b4bf656fe1.json  query-2f90dec5ed2a81dae6cacbd4effa279642b8278f1706c6ba6c05c91b2f474696.json  query-2f9a7f1f660917ef342b7ccbf9b5b34d093926f674a0f9c5b07167d1f304a785.json  query-35c0558afb1c2d8516f785568e0d27eac500da8be12c77b7e7d2bd7fb889a020.json  query-4983053767d33f59ab1f60cc17a8258630ae52827fbfcce2506091f6768baad8.json  query-6a13453738f28ff57ca662a7e1bf04c778a93469f7c69eda653590adf0b8fd71.json  query-84fd382fb7d6e60589c4e3b0bc142b8452986d749af39bae9ca37c14aba17528.json  query-a9bc3b57d8d1fd20701f2df0f1521c7c6c9b245bb0da93617901a4fe370930ef.json  query-b28e30fc9c356a5945a7abea99fc5dfe9a22832f732972ea0694488fbbcaec1d.json  query-c68e8f28df60b272cba3eb81a7394407021b7b09fa05435ba3454c6feb892eb5.json  query-c7a83aae827507844579617a7fd375fe6359b729e80eb5df16ec3691cb6121ee.json  query-cb89fc1d262e805578a9984cd1d277dc76c01423eb5b0e835ffc19a69931b613.json  query-cbeb15e744c53b25a0ab84dbee9f006a39c14c58e97d095d19297de19658ec44.json  query-dfb3e8a20d59c68568e5a7f47b1c78479c9ac1e83f51e8bfa240d95509948541.json  query-f1563534309e9b19b4dce35b2f53e7a2237c6bd1a57d881b2e8f073f1cea82db.json  query-f412b5dc9da0bcdcc0e33d233e32ade7b954b3830f06628975112505f4cead8c.json
docker/: Dockerfile.bot  Dockerfile.dbclient  Dockerfile.scraper
src/: database.rs  error.rs  event_manager.rs  main.rs  state.rs
src/bodies/: current_event.rs  mod.rs  series.rs
src/commands/: mod.rs  ping.rs  repost.rs  set.rs  set_channel.rs  set_role.rs  shutdown.rs  stop_crawler.rs  sync.rs  unset_channel.rs  unset_role.rs
src/crawler/: mod.rs
src/middleware/: magick.rs  mod.rs  parser.rs  runner.rs
src/model/: document.rs  event.rs  guild.rs  mod.rs  series.rs  thread.rs
src/routes/: event.rs  mod.rs  season.rs  series.rs
src/runner/: mod.rs
tools/: docker-build.rs  docker-push.rs  gen_jwt.py  gen_keys.py
