[package]
name = "fia-docs-bot"
version = "1.0.9"
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "fia-docs-bot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fia-docs-bot"
path = "src/main.rs"

[[bin]]
name = "docker-build"
path = "tools/docker-build.rs"

[[bin]]
name = "docker-push"
path = "tools/docker-push.rs"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
f1-bot-types = { git = "https://codeberg.org/MTO/f1-bot-types", version = "0.1.0" }
libsql = "0.6.0"
notifbot-macros = { git = "https://codeberg.org/MTO/f1-bot-macros", version = "0.1.0" }
sentry = { version = "0.37.0", features = ["log", "tracing"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serenity = { git = "https://github.com/serenity-rs/serenity", version = "0.12.2", features = ["cache"], rev = "be4193a60ea1b7cf60b890a4f1491ab63f50945c" }
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
