[package]
name = "fia-docs-api"
version = "0.2.2"
edition = "2024"
default-run = "fia-docs-api"

[[bin]]
name = "docker-build"
path = "tools/docker-build.rs"

[[bin]]
name = "docker-push"
path = "tools/docker-push.rs"

[dependencies]
aws-sign-v4 = { git = "https://github.com/MarkusTheOrt/aws-sign-v4", version = "0.3.0" }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
f1-bot-types = { git = "https://codeberg.org/MTO/f1-bot-types", version = "0.1.0" }
html5ever = "0.31.0"
libsql = "0.9.9"
reqwest = "0.12.19"
sentry = { version = "0.38.1", features = ["tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
sha256 = "1.6.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
